[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenmeter"
version = "0.1.0"
description = "A library for calculating and estimating costs of language model usage"
readme = "README.md"
authors = [{name = "Rehan Asif", email = "asif.rehan@icloud.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["nlp", "language models", "cost estimation", "openai"]
dependencies = [
    "requests",
    "tiktoken",
    "openai",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8"]

[project.urls]
Homepage = "https://github.com/rehan-ai/tokenmeter"
"Bug Tracker" = "https://github.com/rehan-ai/tokenmeter/issues"